@@ -1,14 +1,15 @@
 package com.larpologic.secretnetwork.api.information;
 
-import com.larpologic.secretnetwork.api.information.dto.*;
+import com.larpologic.secretnetwork.api.information.dto.ChannelLimitDto;
+import com.larpologic.secretnetwork.api.information.dto.UserInChannelDto;
+import com.larpologic.secretnetwork.api.information.dto.UserWithChannelsDto;
 import com.larpologic.secretnetwork.channel.Channel;
-import com.larpologic.secretnetwork.channel.repository.ChannelRepository;
-import com.larpologic.secretnetwork.user.UserDto;
-import com.larpologic.secretnetwork.userchannel.UserChannel;
-import com.larpologic.secretnetwork.user.UserRepository;
+import com.larpologic.secretnetwork.channel.ChannelService;
 import com.larpologic.secretnetwork.user.User;
-import com.larpologic.secretnetwork.userchannel.dto.UserChannelDto;
-import com.larpologic.secretnetwork.userchannel.repository.UserChannelRepository;
+import com.larpologic.secretnetwork.user.UserService;
+import com.larpologic.secretnetwork.userchannel.UserChannel;
+import com.larpologic.secretnetwork.userchannel.UserChannelService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -16,61 +17,41 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class InformationService {
 
-    private final UserChannelRepository userChannelRepository;
-    private final UserRepository userRepository;
-    private final ChannelRepository channelRepository;
-
-    public InformationService(UserChannelRepository userChannelRepository, UserRepository userRepository, ChannelRepository channelRepository) {
-        this.userChannelRepository = userChannelRepository;
-        this.userRepository = userRepository;
-        this.channelRepository = channelRepository;
-    }
+    private final UserChannelService userChannelService;
+    private final UserService userService;
+    private final ChannelService channelService;
 
     public List<ChannelLimitDto> getUserChannelsWithLimit(String username) {
-        Optional<User> userOptional = userRepository.findByUsername(username);
+        Optional<User> userOptional = userService.findByUsername(username);
         if (userOptional.isEmpty()) {
             return List.of();
         }
         User user = userOptional.get();
-        return userChannelRepository.findByUser(user).stream()
-                .map(this::convertToChannelLimitDto) // Użycie nowego DTO
-                .collect(Collectors.toList());
+        return userChannelService.findByUser(user).stream()
+                .map(this::convertToChannelLimitDto)
+                .toList();
     }
 
     public List<UserInChannelDto> getUsersInChannel(String channelName) {
-        Optional<Channel> channelOptional = Optional.ofNullable(channelRepository.findByName(channelName));
+        Optional<Channel> channelOptional = Optional.ofNullable(channelService.findByName(channelName));
         if (channelOptional.isEmpty()) {
             return List.of();
         }
         Channel channel = channelOptional.get();
-        return userChannelRepository.findByChannel(channel).stream()
+        return userChannelService.findByChannel(channel).stream()
                 .map(this::convertToUserInChannelDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
     public List<UserWithChannelsDto> getAllUsersWithChannelsAndLimits() {
-        return userRepository.findAll().stream()
+        return userService.getAllUsers().stream()
                 .map(this::convertToUserWithChannelsDto)
-                .collect(Collectors.toList());
+                .toList();
     }
-
-    private UserDto convertToUserDto(User user) {
-        UserDto userDto = new UserDto();
-        userDto.setUuid(user.getUuid());
-        userDto.setUsername(user.getUsername());
-        return userDto;
-    }
-
-    private UserChannelDto convertToUserChannelDto(UserChannel userChannel) {
-        UserChannelDto dto = new UserChannelDto();
-        dto.setRemainingLimit(userChannel.getRemainingLimit());
-        dto.setUser(convertToUserDto(userChannel.getUser()));
-        return dto;
-    }
-
 
 
     private ChannelLimitDto convertToChannelLimitDto(UserChannel userChannel) {
@@ -90,9 +71,9 @@ public class InformationService {
         UserWithChannelsDto dto = new UserWithChannelsDto();
         dto.setUuid(user.getUuid());
         dto.setUsername(user.getUsername());
-        List<ChannelLimitDto> channels = userChannelRepository.findByUser(user).stream()
+        List<ChannelLimitDto> channels = userChannelService.findByUser(user).stream()
                 .map(this::convertToChannelLimitDto)
-                .collect(Collectors.toList());
+                .toList();
         dto.setChannels(channels);
         return dto;
     }
